; ModuleID = '/home/carl/AnghaBench/systemd/src/import/extr_pull-common.c_pull_make_local_copy.c'
source_filename = "/home/carl/AnghaBench/systemd/src/import/extr_pull-common.c_pull_make_local_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"/var/lib/machines\00", align 1
@REMOVE_ROOT = common dso_local global i32 0, align 4
@REMOVE_PHYSICAL = common dso_local global i32 0, align 4
@REMOVE_SUBVOLUME = common dso_local global i32 0, align 4
@BTRFS_SNAPSHOT_QUOTA = common dso_local global i32 0, align 4
@BTRFS_SNAPSHOT_FALLBACK_COPY = common dso_local global i32 0, align 4
@BTRFS_SNAPSHOT_FALLBACK_DIRECTORY = common dso_local global i32 0, align 4
@BTRFS_SNAPSHOT_RECURSIVE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"Failed to create local image: %m\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"Created new local image '%s'.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pull_make_local_copy(i8* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @assert(i8* %12)
  %14 = load i8*, i8** %8, align 8
  %15 = call i32 @assert(i8* %14)
  %16 = load i8*, i8** %7, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %4
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  br label %19

19:                                               ; preds = %18, %4
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = call i8* @prefix_roota(i8* %20, i8* %21)
  store i8* %22, i8** %10, align 8
  %23 = load i32, i32* %9, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %33

25:                                               ; preds = %19
  %26 = load i8*, i8** %10, align 8
  %27 = load i32, i32* @REMOVE_ROOT, align 4
  %28 = load i32, i32* @REMOVE_PHYSICAL, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @REMOVE_SUBVOLUME, align 4
  %31 = or i32 %29, %30
  %32 = call i32 @rm_rf(i8* %26, i32 %31)
  br label %33

33:                                               ; preds = %25, %19
  %34 = load i8*, i8** %6, align 8
  %35 = load i8*, i8** %10, align 8
  %36 = load i32, i32* @BTRFS_SNAPSHOT_QUOTA, align 4
  %37 = load i32, i32* @BTRFS_SNAPSHOT_FALLBACK_COPY, align 4
  %38 = or i32 %36, %37
  %39 = load i32, i32* @BTRFS_SNAPSHOT_FALLBACK_DIRECTORY, align 4
  %40 = or i32 %38, %39
  %41 = load i32, i32* @BTRFS_SNAPSHOT_RECURSIVE, align 4
  %42 = or i32 %40, %41
  %43 = call i32 @btrfs_subvol_snapshot(i8* %34, i8* %35, i32 %42)
  store i32 %43, i32* %11, align 4
  %44 = load i32, i32* %11, align 4
  %45 = icmp slt i32 %44, 0
  br i1 %45, label %46, label %49

46:                                               ; preds = %33
  %47 = load i32, i32* %11, align 4
  %48 = call i32 @log_error_errno(i32 %47, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  store i32 %48, i32* %5, align 4
  br label %52

49:                                               ; preds = %33
  %50 = load i8*, i8** %8, align 8
  %51 = call i32 @log_info(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i8* %50)
  store i32 0, i32* %5, align 4
  br label %52

52:                                               ; preds = %49, %46
  %53 = load i32, i32* %5, align 4
  ret i32 %53
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i8* @prefix_roota(i8*, i8*) #1

declare dso_local i32 @rm_rf(i8*, i32) #1

declare dso_local i32 @btrfs_subvol_snapshot(i8*, i8*, i32) #1

declare dso_local i32 @log_error_errno(i32, i8*) #1

declare dso_local i32 @log_info(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
